<resources>
    <string name="app_name">Tour Advisor</string>
    <string name="slogan"><b><i>Your travel companion</i></b></string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="country">Select Country</string>
    <string name="dob">Date of Birth</string>
    <string name="signup">Let\'s Go</string>
    <string name="proceed">Continue with</string>
    <string name="twitter">Twitter</string>
    <string name="new_account">Create a new Account</string>
    <string name="enter_email">or Enter your email address</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="cpass">Confirm Password</string>

    <string name="perf_article_font_size_key">perf_article_font_size</string>
    <string name="perf_feeds_anim_key">perf_feeds_anim_key</string>
    <string name="perf_sources_anim_key">perf_sources_anim_key</string>
    <string name="perf_circular_reveal_key">perf_circular_reveal_key</string>
    <string name="perf_theme_key">perf_theme</string>
    <string name="perf_cache_key">perf_feeds_cache</string>
    <string name="perf_in_app_browser_key">perf_in_app_browser_key</string>
    <string name="perf_feeds_font_size_key">perf_feeds_font_size</string>
    <string name="dismiss">Dismiss</string>

    <string name="change_log">Change Log</string>
    <string name="change_log_desc"><b>Version 0.41</b>\n\nMinor bug fixes.\n\n<b>Version 0.40</b>\n\nAdded sync feature. Now you can synchronize feeds in background and application will save all of the data for offline reading.\n\n<b>Version 0.33</b>\n\nAdded white icons in dark theme(only in category list and sources list) so they are easier to see.\n\nRemoved shadow from toolbars as it was glitching in dark theme.\n\n<b>Version 0.32</b>\n\nMinor bug fixes.\n\nAdded shadow to toolbars.\n\nAdded option to delete the feed from article.\n\n<b>Version 0.31</b>\n\nMinor bug fix, which was making the settings menu crash on some devices.\n\n<b>Version 0.30</b>\n\nAdded Opml integration.\n\nAdded <i>Read External Storage</i> permission so that user can import opml feeds via file stored in SD Card or internal storage.\n\nAdded Curated feeds and option to submit your own feeds to the curated list.\n\nAdded Sorting option, now user can sort the feeds by random, title, category and date.\n\nMinor bug fixes.\n\n<b>Version 0.22</b>\n\nMade circular reveal animation optional, you can disable it in settings.\n\n<b>Version 0.21</b>\n\nFixed a bug in which white screen was shown on splash screen.\n\nAdded the option to rate, view source code and view licence in About screen.\n\n<b>Version 0.20</b>\n\nAdded dark theme.\n\n<b>Version 0.11</b>\n\nRemoved duplicate entries in settings menu.\n\n<b>Version 0.10</b>\n\nReleased initial version.</string>
    <string name="action_search">Search</string>
    <string name="roboto_light">sans-serif-light</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="appintro_title_1"><b>Hello there ?</b></string>
    <string name="appintro_desc_1">The gifts \nEndowed to us by \nThe mother nature.</string>
    <string name="appintro_title_2"><b>Simple \t to \t\t\t Use</b></string>
    <string name="appintro_desc_2">Explore destinations \nDepending on what \nYou want to see.</string>
    <string name="appintro_title_3"><b>Simple \t\t\t\t to \t\t\t\t Discover</b></string>
    <string name="appintro_desc_3">Consider several \nFactors before travel \nAnd actual visit.</string>
    <string name="appintro_title_4"><b>Visit \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t</b></string>
    <string name="appintro_desc_4">Go. Travel. Visit. \nAnd enjoy the \nAdventure</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tour_advisor">Tour Advisor</string>
    <string name="tour_accommodations">Accommodations</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="showinmap">Show in map</string>
    <string name="title_activity_showinmap">Showing in Map</string>
    <string name="action_share">Share</string>
    <string name="action_add">Add</string>
</resources>
