<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center_horizontal"
android:orientation="vertical"
android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="centerInside"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/color_tour_name" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_input_layout">
        <EditText
            android:id="@+id/txtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_weight="1"
            android:textSize="20sp"
            android:inputType="textPersonName"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_input_layout">
        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_weight="1"
            android:textSize="20sp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city_input_layout">
        <EditText
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_weight="1"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/city"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/country_input_layout">
        <EditText
            android:id="@+id/txtCountry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_weight="1"
            android:textSize="20sp"
            android:inputType="text"
            android:hint="@string/country"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dob_input_layout">

        <EditText
            android:id="@+id/txtDob"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:layout_weight="1"
            android:textSize="20sp"
            android:inputType="date"
            android:hint="@string/dob"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/signup"
        android:textColor="@color/white"
        android:background="@drawable/signupbtn"
        android:layout_weight="1" />

    <TextView
        android:text="@string/slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/textView" />

</LinearLayout>



</ScrollView>
