<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:scaleType="centerInside"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/color_tour_name" />

        <TextView
            android:text="@string/proceed"
            android:textSize="18dp"
            android:layout_marginLeft="50dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" />
        <Button
            android:text="@string/twitter"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnTwitter"
            android:textColor="@color/white"
            android:background="@drawable/signupbtn"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_marginTop="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:id="@+id/enter_email_input_layout">

                <EditText
                    android:id="@+id/txt_EnterEmail"
                    android:layout_marginLeft="15dp"
                    android:layout_width="210dp"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:inputType="text"
                    android:hint="@string/enter_email"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLogin"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/authenticationbtn"
                android:layout_weight="1"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>


        <Button
            android:text="@string/new_account"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/signup"
            android:textColor="@color/white"
            android:background="@drawable/signupbtn"
            android:layout_weight="1" />

        <TextView
            android:text="@string/slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/textView" />

    </LinearLayout>



</ScrollView>
